--- a/src/components/Noise/Noise.module.css
+++ b/src/components/Noise/Noise.module.css
@@ -14,7 +14,7 @@
 .types {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 0.6em;
   color: rgba(255, 255, 255, 0.5);
   width: 100%;
 }
@@ -30,8 +30,8 @@
 .waveform {
   display: flex;
   align-items: center;
-  height: 60px;
-  width: 80px;
+  height: 5.8em;
+  width: 5.8em;
   mask-image: linear-gradient(
     90deg,
     transparent,
