--- a/src/components/SectionWrapper/SectionWrapper.module.css
+++ b/src/components/SectionWrapper/SectionWrapper.module.css
@@ -7,6 +7,7 @@
 .name {
   color: rgba(255, 255, 255, 0.7);
   padding-bottom: var(--section-name-padding-bottom);
+  position: relative;
 }
 
 .container {
@@ -19,7 +20,6 @@
   );
   position: relative;
   z-index: 3;
-  line-height: calc(var(--main-synth-ui-font-size) - 0.1em);
   box-shadow: 0 0 1.2em 0.15em rgba(255, 255, 255, 0.025),
     0 0 0 0.15em rgba(255, 255, 255, 0.25);
 }
