--- a/src/components/AddEffect/AddEffect.module.css
+++ b/src/components/AddEffect/AddEffect.module.css
@@ -1,14 +1,15 @@
 .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .effect_container {
   display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  min-height: 200px;
+  gap: 0.8em;
+  min-height: 19.5em;
   align-items: center;
+  justify-content: center;
   overflow-x: scroll;
   padding: var(--section-padding);
 }
@@ -16,21 +17,16 @@
 .effect {
   display: flex;
   flex-direction: column;
-  width: 150px;
-  height: 200px;
+  width: 16em;
+  height: 16em;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid #ffffff37;
-  border-radius: 6px;
-  padding: 40px 30px 40px 30px;
+  border: 0.1em solid #ffffff37;
+  border-radius: 0.5em;
+  padding: 2em;
   text-align: center;
   cursor: pointer;
   white-space: nowrap;
-  letter-spacing: 1px;
-}
-
-.effect_name {
-    padding-left: 4px;
 }
 
 .effect:hover {
@@ -41,21 +37,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  gap: 0.8em;
   flex-shrink: 0;
-  border-left: 1px solid #bebebe37;
+  border-left: 0.1em solid #bebebe37;
   cursor: pointer;
-  letter-spacing: 1px;
-  height: 200px;
+  height: 16em;
   justify-content: center;
   padding: var(--section-padding);
   color: #ffffffad;
-  margin: var(--section-padding) 0;
   width: 120px;
 }
 
 .close:hover {
   color: #ffffffdd;
   text-shadow: 0 0 10px #ffffffbc;
-  border-left: 1px solid #bebebe6f;
+  border-left: 0.1em solid #bebebe6f;
 }
