--- a/src/components/BitCrusher/BitCrusherImage/BitCrusherImage.module.css
+++ b/src/components/BitCrusher/BitCrusherImage/BitCrusherImage.module.css
@@ -2,20 +2,19 @@
   letter-spacing: normal;
   text-transform: lowercase;
   flex-direction: column;
-  height: 70px;
+  height: 6em;
   display: flex;
   justify-content: center;
   align-items: center;
   grid-column-start: 1;
   grid-column-end: 3;
-  gap: 5px;
+  gap: 0.8em;
 }
 
 .row h3 {
-  font-size: 24px;
   font-variation-settings: "BLED" 0, "SCAN" -40;
   color: rgba(var(--bitcrusher-light), 0.7);
-  text-shadow: 0 0 5px rgba(var(--bitcrusher-light), 0.7);
+  text-shadow: 0 0 0.4em rgba(var(--bitcrusher-light), 0.7);
   position: relative;
 }
 
@@ -25,17 +24,14 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 20px;
+  height: 1.8em;
   
 }
 
 .binary_numbers div {
   width: 100%;
   height: 100%;
-  font-size: 8px;
-  letter-spacing: 1px;
-  line-height: 8px;
-
+  font-size: 0.8em;
   color: rgba(var(--bitcrusher-light), 0.7);
-  text-shadow: 0 0 4px rgba(var(--bitcrusher-light), 0.5);
+  text-shadow: 0 0 0.4em rgba(var(--bitcrusher-light), 0.5);
 }
