--- a/src/components/FxWrapper/FxWrapper.module.css
+++ b/src/components/FxWrapper/FxWrapper.module.css
@@ -1,17 +1,13 @@
 .container {
-  padding: 20px 15px 10px 15px;
-  border-radius: 8px;
+  padding: 1.5em;
+  border-radius: 0.5em;
   backdrop-filter: blur(22px);
-  box-shadow: inset 0 0 5px 0 rgb(0 0 0 / 80%);
-  height: 200px;
-
-  
+  box-shadow: inset 0 0 0.4em 0 rgb(0 0 0 / 80%);
 }
 
 .container_bypass {
-  height: 200px;
-  padding: 20px;
-  border-radius: 8px;
+  padding: 1.5em;
+  border-radius: 0.5em;
   backdrop-filter: blur(22px);
   filter: grayscale(0.8) opacity(50%);
   pointer-events: none;
@@ -19,27 +15,27 @@
 
 .delete {
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 0.4em;
+  right: 0.4em;
   cursor: pointer;
-  width: 12px;
-  height: 12px;
+  width: 1em;
+  height: 1em;
   border-radius: 100%;
   background: rgb(191 18 18);
-  box-shadow: 0 0 5px 0 rgb(255 0 0 / 80%), inset 0 0 0 1px rgb(255 96 96 / 80%);
+  box-shadow: 0 0 0.4em 0 rgb(255 0 0 / 80%), inset 0 0 0 0.1em rgb(255 96 96 / 80%);
  
 }
 
 .bypass {
   position: absolute;
-  top: 5px;
-  right: 22px;
+  top: 0.4em;
+  right: 1.8em;
   cursor: pointer;
-  width: 12px;
-  height: 12px;
+  width: 1em;
+  height: 1em;
   border-radius: 100%;
   background: rgba(234, 255, 0, 0.8);
-  box-shadow: 0 0 5px 0 rgba(234, 255, 0, 0.8), inset 0 0 0 1px rgba(223, 255, 96, 0.8);
+  box-shadow: 0 0 0.4em 0 rgba(234, 255, 0, 0.8), inset 0 0 0 0.1em rgba(223, 255, 96, 0.8);
 
 }
 
@@ -47,7 +43,7 @@
   cursor: grab;
   position: absolute;
   left: 0;
-  bottom: 5px;
+  bottom: 0.4em;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -55,28 +51,28 @@
 }
 
 .dot {
-  height: 5px;
-  width: 5px;
+  height: 0.4em;
+  width: 0.4em;
   border-radius: 100%;
   position: relative;
 }
 
 .dot::before {
-  left: -8px;
+  left: -0.6em;
   position: absolute;
   content: "";
-  height: 5px;
-  width: 5px;
+  height: 0.4em;
+  width: 0.4em;
   background: inherit;
   border-radius: 100%;
 }
 
 .dot::after {
-  left: 8px;
+  left: 0.6em;
   position: absolute;
   content: "";
-  height: 5px;
-  width: 5px;
+  height: 0.4em;
+  width: 0.4em;
   background: inherit;
   border-radius: 100%;
 }
