--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,112 +1,79 @@
 .wrapper {
   display: flex;
-  align-self: flex-end;
+  align-self: end;
   z-index: 50;
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 1em;
 }
 
 .container {
   display: flex;
-  padding: 10px;
+  padding: 0.5em;
   align-items: center;
   justify-content: space-between;
-}
-
-.midi {
-  display: flex;
-  gap: 10px;
-  align-items: center;
+  gap: 0.5em;
 }
 
 .midi span {
-  margin-right: calc(var(--main-synth-ui-font-size) * -0.2);
-  margin-top: calc(var(--main-synth-ui-font-size) * 0.1);
-}
-
-.midi_selector {
-  background: #ffffff0e;
-  color: #ffffff92;
-  /* width: 180px; */
-  height: 26px;
-  padding: 0 10px;
-  max-width: 220px;
-  border-radius: 6px;
-  border: 1px solid #acacac47;
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
-  /* overflow: hidden; */
-  position: relative;
-}
-
-.midi_selector label {
-  margin-top: calc(var(--main-synth-ui-font-size) * 0.1);
-  overflow: hidden;
-  text-overflow: ellipsis;
+  padding-right: 0.5em;
 }
 
 .preset {
   position: relative;
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 0.5em;
 }
 
 .preset_name {
-  background: #ffffff0e;
-  color: #ffffff92;
-  width: 180px;
-  height: 26px;
-  padding: 0 10px;
-  max-width: 220px;
-  border-radius: 6px;
-  border: 1px solid #acacac47;
-  display: flex;
-  align-items: center;
   white-space: nowrap;
-  cursor: pointer;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: flex;
+  width: 12em;
 }
 
 .preset_name span {
-  padding-top: 1px;
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.preset_name:hover {
-  color: #fffffff8;
-  background: #ffffff28;
-}
-
-/* .midi_selector::after {
-  content: "";
-  position: absolute;
-  border-radius: 6px;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  left: 100px;
-  margin: auto;
-  font-size: 12px;
-  background: linear-gradient(0.25turn, #ffffff00, rgb(26, 26, 26));
-} */
-
 .no_midi_support {
   cursor: unset;
-  width: 300px;
+  width: 15em;
+}
+
+.midi_selector {
+  width: 15em;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: left;
+  position: relative;
+}
+
+.midi_selector label {
+  display: inline-block;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .selecting_midi {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 0.8em;
   background-color: rgb(26, 26, 26);
   backdrop-filter: blur(22px);
   color: #ffffffa7;
-  padding: 10px;
-  border-radius: 6px;
-  border: 1px solid #acacac47;
+  padding: 0.8em;
+  border-radius: 0.5em;
+  border: 0.1em solid #acacac47;
   position: absolute;
-  top: 28px;
+  top: 2em;
   left: 0;
 }
 
@@ -116,61 +83,40 @@
 
 .buttons {
   display: flex;
-  gap: 10px;
+  gap: 0.5em;
 }
 
 .header_button {
-  font-size: var(--main-synth-ui-font-size);
-  padding-top: calc(var(--main-synth-ui-font-size) * 0.1);
-  text-transform: uppercase;
-  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.2);
-  background: #ffffff0e;
-  color: #ffffffa7;
-  border-radius: 6px;
-  border: 1px solid #acacac47;
-  padding-left: calc(var(--main-synth-ui-font-size) * 0.15 + 10px);
-  padding-right: 10px;
-  height: 26px;
+  /* text-align: center; */
 }
 
-
-
-.keyboard_button {
-  padding-left: 8px;
-  padding-right: 8px;
-  background: #ffffff0e;
-  border: 1px solid #acacac47;
-  border-radius: 6px;
+.icon_button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  width: 2em;
+  height: 2em;
 }
 
-.keyboard_button:hover {
-  background: #ffffff28;
+.header_button {
+  text-align: center;
+  min-width: 2em;
+  min-height: 2em;
+  display: flex;
+  align-items: center;
+  text-wrap: nowrap;
 }
 
-.keyboard_button img {
-  opacity: 0.65;
+.icon_button img,
+.icon_button svg {
+  width: 1.3em;
+  height: auto;
 }
 
-.header_button:hover {
-  color: #fffffff8;
-  background: #ffffff28;
+.icon_button img {
+  opacity: 0.8;
 }
-
-.settings_button {
-  background: #ffffff0e;
-  color: #ffffffa7;
-  border-radius: 6px;
-  border: 1px solid #acacac47;
-  padding: 0 5px;
-  height: 26px;
-  cursor: pointer;
-}
-
-.settings_button:hover {
-  color: #fffffff8;
-  background: #ffffff28;
-}
-
 .selected {
   box-shadow: inset 0 0 14px 0 rgba(255, 255, 255, 0.538),
     0 0 5px 0 rgba(255, 255, 255, 0.521);
@@ -181,4 +127,16 @@
 
 .show_ui {
   margin: 10px;
+}
+
+@media screen and (max-width: 44rem)  {
+  .midi {
+    display: none;
+  }
+  .preset_name {
+    width: 100%;
+  }
+  .preset {
+    width: 100%;
+  }
 }
