--- a/src/components/Keyboard/Keyboard.module.css
+++ b/src/components/Keyboard/Keyboard.module.css
@@ -1,4 +1,8 @@
 .wrapper {
     width: 100%;
+    touch-action: none;
+    /* display: flex;
 
+    justify-content: center;
+    align-items: center; */
 }
