--- a/src/components/LFO/LFO.module.css
+++ b/src/components/LFO/LFO.module.css
@@ -1,54 +1,45 @@
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  font-size: var(--main-synth-ui-font-size);
-  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.2);
-  height: fit-content;
-  text-transform: uppercase;
-  width: 100%;
-  user-select: none;
-}
+
 
 .name {
   color: rgba(255, 255, 255, 0.7);
+  padding-bottom: var(--section-name-padding-bottom);
+  position: relative;
 }
 
 .container {
+  width: 28.5em;
   display: flex;
   width: var(--section-width-large);
-  height: 198.55px;
+  height: 16.5em;
   row-gap: var(--grid-row-gap);
   justify-content: space-between;
   color: rgba(255, 255, 255, 0.95);
   padding: var(--section-padding);
-  border-radius: 8px;
+  border-radius: 0.5em;
 
   background: radial-gradient(
     107.32% 141.42% at 0% 0%,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(255, 255, 255, 0.03) 100%
+    rgba(58, 58, 58, 0.5) 0%,
+    rgba(3, 3, 3, 0.3) 100%
   );
   position: relative;
   backdrop-filter: blur(22px);
-  line-height: calc(var(--main-synth-ui-font-size) - 1px);
 }
 
 .borderLFO1 {
-  box-shadow: 0 0 0 2px #e35160b5;
+  box-shadow: 0 0 0 0.15em #e35160b5;
 }
 
 .borderLFO2 {
-  box-shadow: 0 0 0 2px #51b7e3b5;
+  box-shadow: 0 0 0 0.15em #51b7e3b5;
 }
 
 .shapes {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 0.6em;
   color: rgba(255, 255, 255, 0.5);
   width: 100%;
-  padding-bottom: 20px;
 }
 
 .shapes > li {
@@ -61,7 +52,7 @@
 
 .destinations {
   height: 100%;
-  width: 160px;
+  width: 12em;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -72,14 +63,15 @@
 .targets {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 1em;
+  cursor: grab;
 }
 
 .waveform {
   display: flex;
   align-items: center;
-  height: 60px;
-  width: 60px;
+  height: 5.8em;
+  width: 5.8em;
   mask-image: linear-gradient(
     90deg,
     transparent,
@@ -96,51 +88,29 @@
 .underlay {
   position: absolute;
   width: 100%;
-  height: 134px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 .selector {
-  background: #ffffff0e;
-  width: 160px;
-  height: 26px;
-  margin-bottom: 10px;
-  border-radius: 6px;
-  border: 1px solid #acacac47;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
+  height: 2em;
 }
-
-.selector label {
-  padding-left: calc(var(--main-synth-ui-font-size) * 0.2);
-  padding-top: calc(var(--main-synth-ui-font-size) * 0.19);
-  color: #ffffff92;
-}
-
-.selector:hover {
-  background: #ffffff28;
-  cursor: pointer;
-}
-
 
 
 .sync {
-  margin-top: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 26px;
-  border-radius: 6px;
-  background: #ffffff0e;
-  border: 1px solid #acacac47;
-  color: #ffffff92;
-  box-shadow: inset 0 0 6px 0 rgba(0, 0, 0, 0.859);
+  margin-top: 3.2em;
+
+  height: 2em;
+
 }
 
 .sync_activeLFO1 {
-  border: 1px solid #e35160b5;
+  border: 0.1em solid #e35160b5;
   background: #331a1c;
   color: #ee5464f3;
-  text-shadow: 0 0 5px #e05261c4;
+  text-shadow: 0 0 0.4em #e05261c4;
   position: relative;
 }
 
@@ -151,19 +121,19 @@
   width: 100%;
   height: 100%;
   content: "";
-  border-radius: 6px;
+  border-radius: 0.5em;
   background: linear-gradient(0.25turn, #ff8491, #ffc3c9);
-  /* box-shadow: inset 0 0 5px 1px rgb(255 214 214); */
-  border: 1px solid #e35160b5;
+  /* box-shadow: inset 0 0 0.4em 0.1em rgb(255 214 214); */
+  border: 0.1em solid #e35160b5;
   mix-blend-mode: overlay;
 
 }
 
 .sync_activeLFO2 {
-  border: 1px solid #51b7e3b5;
+  border: 0.1em solid #51b7e3b5;
   background: #1A2A33;
   color: #54bdeef3;
-  text-shadow: 0 0 5px #52e0f3c4;
+  text-shadow: 0 0 0.4em #52e0f3c4;
   position: relative;
 }
 
@@ -174,10 +144,10 @@
   width: 100%;
   height: 100%;
   content: "";
-  border-radius: 6px;
+  border-radius: 0.5em;
   background: linear-gradient(0.25turn, #51bce3, #c3e9ff);
-  /* box-shadow: inset 0 0 5px 1px rgb(81 188 227); */
-  border: 1px solid #51bce3b5;
+  /* box-shadow: inset 0 0 0.4em 0.1em rgb(81 188 227); */
+  border: 0.1em solid #51bce3b5;
   mix-blend-mode: overlay;
 }
 
