--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -12,7 +12,7 @@
 }
 
 .content {
-    border-radius: 8px;
+    border-radius: 0.5em;
     background: radial-gradient(
       107.32% 141.42% at 0% 0%,
       rgba(58, 58, 58, 0.5) 0%,
@@ -20,13 +20,12 @@
     );
     position: relative;
     z-index: 3;
-    line-height: calc(var(--main-synth-ui-font-size) - 1px);
-    box-shadow: 0 0 20px 2px rgba(255, 255, 255, 0.025), 
-    0 0 0 2px rgba(255, 255, 255, 0.25);
+    box-shadow: 0 0 1.5em 0.1em rgba(255, 255, 255, 0.025), 
+    0 0 0 0.1em rgba(255, 255, 255, 0.25);
     backdrop-filter: blur(30px);
   -webkit-backdrop-filter: blur(30px);
     width: 100%;
-    max-width: 600px;
-    margin: 10px;
+    max-width: 40em;
+    margin: 1em;
     
 }
