--- a/src/components/PingPongDelay/Rackets/Rackets.module.css
+++ b/src/components/PingPongDelay/Rackets/Rackets.module.css
@@ -1,46 +1,42 @@
 .rackets {
-    position: relative;
-    height: 30px;
-    z-index: 5;
+  position: relative;
+  height: 3em;
+  z-index: 5;
+}
+
+.rackets svg {
+  width: 3em;
+  height: 3em;
 }
 
 .rackets svg:nth-child(1) {
-    position: absolute;
-    top: 10px;
-    left: 0;
-    transform: scale(2);
+  position: absolute;
+  top: 1em;
+  left: 0;
 }
 
 .rackets svg:nth-child(2) {
-    position: absolute;
-    top: -8px;
-    left: 15px;
-    transform: scale(2);
+  position: absolute;
+  top: 0;
+  left: 0.8em;
 }
 
 .rackets svg:nth-child(3) {
-    position: absolute;
-    top: 4px;
-    left: 24px;
-    transform: scale(2);
+  position: absolute;
+  top: 0.6em;
+  left: 1.2em;
 }
 
-.label {
-    font-size: 24px;
-    line-height: 16px;
-  }
-  
-  .label h3 {
-    color: rgba(255, 255, 255, 0.9);
-    text-shadow: 0 0 10px rgba(var(--ping-pong-delay-rgb), 0.5);
-    white-space: nowrap;
-    letter-spacing: 0;
-    z-index: 10;
-    position: relative;
-    text-align: left;
-  }
-  
-  .label h3:nth-child(3) {
-    color: rgba(var(--ping-pong-delay-rgb), 0.9);
-    text-shadow: 0 0 10px rgba(var(--ping-pong-delay-rgb), 0.5);
-  }
+
+.label h4 {
+  text-align: left;
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 0.8em rgba(var(--ping-pong-delay-rgb), 0.5);
+  line-height: 0.6;
+  letter-spacing: 0;
+}
+
+.label h4:nth-child(2) {
+  color: rgba(var(--ping-pong-delay-rgb), 0.9);
+  text-shadow: 0 0 0.8em rgba(var(--ping-pong-delay-rgb), 0.5);
+}
