--- a/src/components/PolySynth/PolySynth.module.css
+++ b/src/components/PolySynth/PolySynth.module.css
@@ -1,36 +1,68 @@
 .wrapper {
   padding: 1em;
-  /* font-size: var(--main-synth-ui-font-size); */
   letter-spacing: calc(var(--main-synth-ui-font-size) * 0.1);
   text-transform: uppercase;
   display: flex;
   flex-direction: column;
-  gap: 15px;
   z-index: 2;
   user-select: none;
-  height: 100vh;
+  font-size: var(--font-size);
 }
-
 .container {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-}
-
-.left_right {
-  display: flex;
-  gap: 15px;
-  justify-content: space-between;
   flex-wrap: wrap;
+  justify-content: space-between;
+  grid-template-columns: 1fr 1fr;
+  padding-top: 4em;
+  gap: 1em;
 }
-
 .left {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
   height: fit-content;
-  gap: 15px;
+  width: min-content;
+  row-gap: 1em;
+}
+.osc1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+.osc2 {
+  grid-column: 1;
+  grid-row: 2;
+}
+.noise {
+  grid-column: 1;
+  grid-row: 3;
+}
+.misc {
+  grid-column: 1;
+  grid-row: 4;
+}
+.right {
+  display: grid;
+  grid-template-columns:1fr;
+  row-gap: 1em;
+  height: fit-content;
   /* width: 100%; */
+  justify-items: end;
+}
+
+.filter {
+  grid-column: 1;
+  grid-row: 1;
+}
+.envelope {
+  grid-column: 1;
+  grid-row: 2;
+}
+.lfo1 {
+  grid-column: 1;
+  grid-row: 3;
+}
+.lfo2 {
+  grid-column: 1;
+  grid-row: 4;
 }
 
 .bottom {
@@ -40,15 +72,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 10px;
+  padding: 1em;
   z-index: 20;
-  /* gap: 15px; */
-}
-
-.right {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
 }
 
 .filter_amp {
@@ -62,76 +87,14 @@
 .LFOs {
   display: flex;
   gap: 15px;
-  /* flex-wrap: wrap; */
-  /* flex-direction: row; */
   flex-direction: column;
   padding-top: 15px;
   width: max-content;
 }
 
-@media screen and (max-height: 1205px) {
-  .left {
- grid-template-columns: 1fr 1fr;
-
-  }
-
-  
-
-  /* .LFOs {
-    flex-direction: row;
-    left: 0;
-    position: absolute;
-    padding: 10px;
-    padding-top: 15px;
-  } */
-  /* .right {
-
-    grid-template-columns: 1fr 1fr;
-  } */
-}
-@media screen and (max-width: 1040px) {
-  .left {
-    width: 100%;
-  }
-
-  .right {
-    width: 100%;
-  }
-
-  .LFOs {
-    width: 100%;
-  }
-
-  .filter_amp {
-    width: 100%;
+@media screen and (max-width: 44rem)  {
+  .container {
+    justify-content: center;
+    font-size: calc(0.2vw + var(--font-size));
   }
 }
-
-@media screen and (max-width: 810px) {
-  .LFOs {
-    flex-direction: column;
-  }
-}
-  
-/* @media screen and (max-width: 768px) {
-  .wrapper {
-    align-items: center;
-  }
-
-  .left_right {
-    flex-direction: column;
-    align-items: center;
-  }
-  .left {
-   
-  }
-  .right {
-  }
-  .bottom {
-    
-  }
-
-  .LFOs {
-    flex-direction: column;
-  }
-} */
