--- a/src/components/PresetLibrary/PresetLibrary.module.css
+++ b/src/components/PresetLibrary/PresetLibrary.module.css
@@ -1,53 +1,51 @@
 .wrapper {
   width: fit-content;
-  border-radius: 8px;
+  border-radius: 0.5em;
   background: radial-gradient(
     107.32% 141.42% at 0% 0%,
     rgba(58, 58, 58, 0.7) 0%,
     rgba(3, 3, 3, 0.5) 100%
   );
-  line-height: calc(var(--main-synth-ui-font-size) - 1px);
-  box-shadow: 0 0 20px 2px rgba(255, 255, 255, 0.025),
-    0 0 0 2px rgba(255, 255, 255, 0.25);
+  box-shadow: 0 0 1.4em 0.15em rgba(255, 255, 255, 0.025),
+    0 0 0 0.15em rgba(255, 255, 255, 0.25);
   backdrop-filter: blur(30px);
   -webkit-backdrop-filter: blur(30px);
-  margin: 10px;
-  padding: 10px;
+  margin: 1em;
+  padding: 0.5em;
   pointer-events: all;
-  max-width: 900px;
+  max-width: 55em;
   width: 100%;
 }
 
 .container {
   color: rgba(255, 255, 255, 0.8);
   display: flex;
-  max-width: 900px;
   width: 100%;
 }
 
 .table {
   width: 70%;
   height: fit-content;
-  margin-bottom: 20px;
+  margin-bottom: 1.5em;
   position: relative;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 0.1em solid rgba(255, 255, 255, 0.2);
 }
 
 .table th {
   text-align: left;
-  padding: 10px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 0.6em;
+  border-bottom: 0.1em solid rgba(255, 255, 255, 0.2);
 }
 
 .table td {
-  height: 30px;
-  padding-left: 10px;
-  
+  height: 2em;
+  padding-left: 0.6em;
+
   cursor: pointer;
 }
 
 .table tr {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 0.1em solid rgba(255, 255, 255, 0.2);
 }
 
 .table tr:last-child {
@@ -56,10 +54,9 @@
 
 .table tbody {
   display: block;
-  width: 100%; 
-  overflow-y: auto; 
-  height: 320px;
- 
+  width: 100%;
+  overflow-y: auto;
+  min-height: 20em;
 }
 .table tr {
   display: table;
@@ -76,8 +73,8 @@
 }
 
 .description {
-  padding: 10px;
-  border-radius: 6px;
+  padding: 0.6em;
+  border-radius: 0.5em;
   background-color: rgba(var(--waveform-color), 0.15);
   width: 30%;
   min-height: 100%;
@@ -88,7 +85,7 @@
 }
 
 .description h6 {
-  padding-bottom: 10px;
+  padding-bottom: 0.6em;
   color: color-mix(
     in srgb,
     rgba(var(--waveform-color), 1) 40%,
@@ -102,12 +99,11 @@
     rgba(var(--waveform-color), 1) 40%,
     rgba(255, 255, 255, 0.95)
   );
-  margin-right: 5px;
+  margin-right: 0.4em;
 }
 
 .description p {
-  line-height: normal;
-  font-size: 14px;
+  /* font-size: 14px; */
   text-transform: none;
   letter-spacing: normal;
   color: rgba(255, 255, 255, 0.9);
@@ -116,46 +112,35 @@
 .description hr {
   display: block;
   width: 80%;
-  border-top: 1px solid
+  border-top: 0.1em solid
     color-mix(
       in srgb,
       rgba(var(--waveform-color), 1) 20%,
       rgba(255, 255, 255, 0.525)
     );
-  height: 1px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  height: 0.1em;
+  margin-top: 0.6em;
+  margin-bottom: 0.6em;
 }
 
 .types {
   display: flex;
-  border-radius: 6px;
-  gap: 5px;
-  padding-bottom: 10px;
+  border-radius: 0.5em;
+  gap: 0.4em;
+  padding-bottom: 0.6em;
 }
 
 .type {
   background-color: rgba(255, 255, 255, 0.1);
-  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.2);
-  padding-top: 12px;
-  padding-bottom: 10px;
-  padding-right: 10px;
   text-transform: uppercase;
-  padding-left: calc(var(--main-synth-ui-font-size) * 0.15 + 10px);
-  border-radius: 6px;
+  border-radius: 0.5em;
   color: rgba(255, 255, 255, 0.5);
 }
 
 .selected_type {
   background-color: rgba(var(--waveform-color), 0.25);
-  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.2);
-  padding-top: 12px;
-  padding-bottom: 10px;
-  padding-right: 10px;
   text-transform: uppercase;
-  padding-left: calc(var(--main-synth-ui-font-size) * 0.15 + 10px);
-
-  border-radius: 6px;
+  border-radius: 0.5em;
   color: color-mix(
     in srgb,
     rgba(var(--waveform-color), 1) 40%,
@@ -168,7 +153,7 @@
   align-items: center;
   padding: 0 0 15px 0;
   white-space: nowrap;
-  gap: 10px;
+  gap: 0.6em;
   width: 100%;
 }
 
@@ -180,17 +165,17 @@
   display: flex;
   width: 100%;
   align-items: center;
-  border: 1px solid rgba(255, 255, 255, 0.25);
-  border-radius: 6px;
-  padding-right: 10px;
+  border: 0.1em solid rgba(255, 255, 255, 0.25);
+  border-radius: 0.5em;
+  padding-right: 0.6em;
   letter-spacing: calc(var(--main-synth-ui-font-size) * 0.1);
 }
 
 .search_icon {
-  padding: 5px;
+  padding: 0.4em;
   color: rgb(255, 255, 255);
   cursor: pointer;
-  border-radius: 6px;
+  border-radius: 0.5em;
   margin-right: 2px;
 }
 
@@ -219,21 +204,21 @@
 }
 
 .delete {
-  padding-top: 10px;
+  padding-top: 0.6em;
   display: flex;
   flex-direction: column;
-  border-radius: 6px;
-  padding-right: 10px;
+  border-radius: 0.5em;
+  padding-right: 0.6em;
   letter-spacing: calc(var(--main-synth-ui-font-size) * 0.1);
 }
 
 .delete input {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 0.6em;
+  margin-bottom: 0.6em;
   max-width: 60%;
-  border: 1px solid rgba(255, 255, 255, 0.25);
-  border-radius: 6px;
-  padding: 5px;
+  border: 0.1em solid rgba(255, 255, 255, 0.25);
+  border-radius: 0.5em;
+  padding: 0.4em;
   letter-spacing: calc(var(--main-synth-ui-font-size) * 0.1);
   text-transform: uppercase;
   width: 100%;
@@ -248,14 +233,11 @@
 
 .buttons {
   display: flex;
-  gap: 10px;
+  gap: 0.6em;
 }
 
 .buttons button {
-  padding: 10px 14px 8px 15px;
   border: none;
-  border-radius: 4px;
-  background: rgba(var(--waveform-color), 0.6);
   color: color-mix(in srgb, rgba(var(--waveform-color), 1) 20%, #fff);
   text-transform: uppercase;
 }
@@ -266,24 +248,19 @@
 }
 
 .share {
-  padding-top: 10px;
-  letter-spacing: 1.1px;
+  padding-top: 0.6em;
 }
 
 .share_url {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 0.6em;
+  margin-bottom: 0.6em;
   text-align: left;
 
-  border: 1px solid rgba(255, 255, 255, 0.25);
-  border-radius: 6px;
-  padding-top: 8px;
-  padding-bottom: 7px;
-  padding-left: 8px;
-  padding-right: 8px;
-  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.1);
+  border: 0.1em solid rgba(255, 255, 255, 0.25);
+  border-radius: 0.5em;
+  padding: 0.5em;
+
   text-transform: uppercase;
-  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.1);
 
   background-color: transparent;
   color: color-mix(
@@ -295,5 +272,5 @@
 }
 
 .message {
-  padding-bottom: 10px;
+  padding-bottom: 0.6em;
 }
