--- a/src/components/SavePreset/SavePreset.module.css
+++ b/src/components/SavePreset/SavePreset.module.css
@@ -1,70 +1,64 @@
 .container {
-  padding: 30px;
+  padding: 1em;
 }
 
 .container h1 {
-    font-size: 15px;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #ffffff43;
+  font-size: 1em;
+  margin-bottom: 1.5em;
+  padding-bottom: 0.5em;
+  border-bottom: 0.1em solid #ffffff43;
 }
 
 .container form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  
+  gap: 1em;
 }
 
 .input_container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 0.6em;
 }
-.container form label { 
-    color: #ffffffca;
+.container form label {
+  color: #ffffffca;
 }
 .container form input {
-
-  padding: 10px;
+  padding: 0.6em;
   background-color: transparent;
-  border: 1px solid #ffffff43;
-  border-radius: 6px;
+  border: 0.1em solid #ffffff43;
+  border-radius: 0.5em;
 }
 
 .container form select {
-    text-transform: uppercase;
-  padding: 10px;
-  border: 1px solid #ffffff43;
+  text-transform: uppercase;
+  padding: 0.6em;
+  border: 0.1em solid #ffffff43;
   background-color: transparent;
-  border-radius: 6px;
+  border-radius: 0.5em;
 }
 
 .container form textarea {
-    padding: 10px;
-    border: 1px solid #ffffff43;
-    background-color: transparent;
-    border-radius: 6px;
-    min-height: 80px;
-  }
+  padding: 0.6em;
+  border: 0.1em solid #ffffff43;
+  background-color: transparent;
+  border-radius: 0.5em;
+  min-height: 10em;
+}
 
 .buttons {
-    width: 100%;
+  width: 100%;
   display: flex;
   justify-content: flex-end;
-  gap: 10px;
+  gap: 0.6em;
 }
 
 .buttons button {
-    padding: 10px 14px 8px 15px;
-    border: none;
-    border-radius: 4px;
-    background: rgba(var(--custom-color), 0.6);
-    color: color-mix(in srgb, rgba(var(--custom-color), 1) 20%, #fff);
-    text-transform: uppercase;
+  background: rgba(var(--custom-color), 0.6);
+  color: color-mix(in srgb, rgba(var(--custom-color), 1) 20%, #fff);
 }
 
 .buttons :nth-child(1) {
-    background: rgba(255, 255, 255, 0.15);
-    color: #ffffff53;
+  background: rgba(255, 255, 255, 0.15);
+  color: #ffffff53;
 }
