--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -1,13 +1,13 @@
 .container {
   position: relative;
   display: flex;
-  width: 160px;
+  width: 12em;
 
-  height: 26px;
+  height: 2em;
   overflow: hidden;
-  border-radius: 6px;
+  border-radius: 0.5em;
   align-items: center;
-  box-shadow: inset 0 0 13px 0 rgba(0, 0, 0, 0.859);
+  box-shadow: inset 0 0 0.8em 0 rgba(0, 0, 0, 0.859);
   cursor: grab;
 }
 
@@ -29,6 +29,7 @@
   height: 100%;
   border-radius: 6px;
   mix-blend-mode: overlay;
+  cursor: grab;
 }
 
 .trackLFO1 {
@@ -52,6 +53,7 @@
   padding-left: calc(var(--main-synth-ui-font-size) * 0.2);
   padding-top: calc(var(--main-synth-ui-font-size) * 0.19);
   user-select: none;
+  cursor: grab;
 }
 
 .labelLFO1 {
